# homebot-wm

./: .gitignore  LICENSE  README.md  pyproject.toml  restart_train.sh
configs/: default.yaml
docs/: architecture.md
scripts/: cache_latents.py  collect_data.py  diagnose.py  diagnose_components.py  eval_expert.py  evaluate.py  evaluate_optimized.py  evaluate_state.py  evaluate_state_ensemble.py  run_eval_after_training.sh  train.py  train_block_decoder.py  train_dynamics_mlp.py  train_reward_predictor.py  train_state_dynamics.py
wm_compress/: __init__.py
wm_compress/benchmark/: __init__.py
wm_compress/distillation/: __init__.py
wm_compress/pruning/: __init__.py
wm_compress/quantization/: __init__.py
wm_core/: __init__.py
wm_core/dynamics/: __init__.py  diffusion_dynamics.py  mlp_dynamics.py
wm_core/encoder/: __init__.py  resnet_encoder.py
wm_core/planner/: __init__.py  cem_planner.py
wm_deploy/: __init__.py
wm_deploy/export/: __init__.py
wm_deploy/pipeline/: __init__.py
wm_deploy/tensorrt/: __init__.py
wm_eval/: __init__.py
wm_manip/: __init__.py
wm_nav/: __init__.py
wm_sim/: __init__.py  data_collection.py  dataset.py  env.py  expert.py
wm_sim/assets/: home_tabletop.xml
