[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homebot-wm"
version = "0.1.0"
description = "World Model-driven Lightweight Algorithm Framework for Home Robotics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "gymnasium>=0.29.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
compress = [
    "torch-pruning>=1.3.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
]
sim = [
    "mujoco>=3.0.0",
    "dm-control>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["wm_core*", "wm_compress*", "wm_deploy*", "wm_nav*", "wm_manip*", "wm_sim*", "wm_eval*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
